# CppMultiplayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/client/: GameClient.h
include/network/: NetworkManager.h  Protocol.h
include/server/: GameServer.h
src/client/: CMakeLists.txt  GameClient.cpp  main.cpp
src/network/: CMakeLists.txt  NetworkManager.cpp  Protocol.cpp
src/server/: CMakeLists.txt  GameServer.cpp  main.cpp
